Wed Mar 18 00:06:50 MET 1998 Sven Neumann <sven@gimp.org>

	* gradient.c: fixed a problem in the gradient editor 
        when gimp is started with the no-data option and no
        gradients are load.	   

Tue Mar 17 01:38:18 PST 1998 Manish Singh <yosh@gimp.org>

	* updated gif, animationplay, animoptimize, and bmp plugins

Mon Mar 16 21:52:46 CST 1998  Larry Ewing  <lewing@gimp.org>

	* app/convert.c (indexed_ok_callback): added gimage_ID to the
	dialog struct to check if the gimage was still around.

	* app/commands.c: fixed border/grow/shrink to check for valid
	gimage.  (Once again object if you don't like this method).

Mon Mar 16 16:31:11 PST 1998 Manish Singh <yosh@gimp.org>

	* updated xpm plugin

Mon Mar 16 15:57:08 PST 1998 Manish Singh <yosh@gimp.org>

	* app/iscissors.c: more iscissors fun

Mon Mar 16 17:05:54 CST 1998  Larry Ewing  <lewing@gimp.org>

	* app/commands.c: changed select_feather_cmd_callback to pass the
	gimage->ID rather than the gimage to prevent a fatal error.  If
	you have objections to this speak now.	

Mon Mar 16 17:50:56 EST 1998 Adrian Likins <adrian@gimp.org>

	* plugins/illusion/illusion.c:
	* plugins/papertile/papertile.c:
	* plugins/fractaltrace/fractaltrace.c:
	* plugins/flame/flame.c: Changed MAIN(); to MAIN()

	*gimprc_user: added a commented out (install-colormap)
	option

	*app/install.c: comsetic update to show info about .gimp/scripts

	*plugins/sparkle/sparkle.c:
	*plugins/despeckle/despeckle.c: made a local MIN/MAX instead
	of redefining the normal one (causes problems on some compilers)

Mon Mar 16 05:12:00 CST 1998  Larry Ewing  <lewing@gimp.org>

	* app/move.c: 
	* app/gdisplay.c:
	* app/gimage.c: Reworked the guide drawing and picking code to
	remove all known guide artifacts.

Mon Mar 16 12:20:12 EET 1998 Lauri Alanko <la@iki.fi>

	* app/menus.c: Fixed the tool options disappearing at undo.

Mon Mar 16 02:03:47 PST 1998 Manish Singh <yosh@gimp.org>

	* updated gif and animationplay plugins
